fix overflow in <pre>

--- a/sass/default.scss
+++ b/sass/default.scss
@@ -46,6 +46,7 @@ pre {
     font-size: 14px;
     line-height: 1.3rem;
     padding: 10px 20px;
+    overflow: auto;
 }
 
 .subtitle {
@@ -147,4 +148,3 @@ div.info {
         margin-right: 10px;
     }
 }
-
